Add Tasks with tailwind styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/navbar" %>
+
+    <main>
+      <% if @title.present? %>
+        <%= render "shared/header", locals: { title: @title } %>
+      <% end %>
+
+      <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
+        <%= yield %>
+      </div>
+    </main>
   </body>
 </html>
