Set page titles on devise generated views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
     <%= render "shared/navbar" %>
 
     <main>
-      <% if @title.present? %>
-        <%= render "shared/header", locals: { title: @title } %>
+      <% if @page_title.present? %>
+        <%= render "shared/header", locals: { page_title: @page_title } %>
       <% end %>
 
       <div class="mx-auto max-w-7xl py-6 sm:px-6 lg:px-8">
