--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,98 +10,77 @@
               alt="Your Company"
             >
           </div>
+
+          <% if user_signed_in? %>
+            <div class="hidden md:block">
+              <div class="ml-10 flex items-baseline space-x-4">
+                <%= link_to "Tasks",
+                tasks_path,
+                class: "bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" %>
+              </div>
+            </div>
+          <% else %>
+            <div class="hidden md:block">
+              <div class="ml-10 flex items-baseline space-x-4">
+                <%= link_to "Sign in",
+                new_user_session_path,
+                class: "bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" %>
+
+                <%= link_to "Sign up",
+                new_user_registration_path,
+                class:
+                  "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+
+        <% if user_signed_in? %>
           <div class="hidden md:block">
-            <div class="ml-10 flex items-baseline space-x-4">
-              <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300
-              hover:bg-gray-700 hover:text-white" -->
-              <a
-                href="#"
-                class="
-                  bg-gray-900
-                  text-white
-                  rounded-md
-                  px-3
-                  py-2
-                  text-sm
-                  font-medium
-                "
-                aria-current="page"
-              >Dashboard</a>
-            </div>
-          </div>
-        </div>
-        <div class="hidden md:block">
-          <div class="ml-4 flex items-center md:ml-6">
-            <!-- Profile dropdown -->
-            <div class="relative ml-3">
+            <div class="ml-4 flex items-center md:ml-6">
               <div>
-                <button
-                  type="button"
-                  class="
-                    relative
-                    flex
-                    max-w-xs
-                    items-center
-                    rounded-full
-                    bg-gray-800
-                    text-sm
-                    focus:outline-none
-                    focus:ring-2
-                    focus:ring-white
-                    focus:ring-offset-2
-                    focus:ring-offset-gray-800
-                  "
-                  id="user-menu-button"
-                  aria-expanded="false"
-                  aria-haspopup="true"
-                >
-                  <span class="absolute -inset-1.5"></span>
-                  <span class="sr-only">Open user menu</span>
-                  <img
-                    class="h-8 w-8 rounded-full"
-                    src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-                    alt=""
-                  >
-                </button>
+                <%= link_to "Sign out",
+                destroy_user_session_path,
+                class:
+                  "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
-              <!-- Dropdown menu, show/hide based on menu state. Entering:
-              "transition ease-out duration-100" From: "transform opacity-0
-              scale-95" To: "transform opacity-100 scale-100" Leaving:
-              "transition ease-in duration-75" From: "transform opacity-100
-              scale-100" To: "transform opacity-0 scale-95" -->
-              <div
-                class="
-                  absolute
-                  right-0
-                  z-10
-                  mt-2
-                  w-48
-                  origin-top-right
-                  rounded-md
-                  bg-white
-                  py-1
-                  shadow-lg
-                  ring-1
-                  ring-black
-                  ring-opacity-5
-                  focus:outline-none
-                "
-                role="menu"
-                aria-orientation="vertical"
-                aria-labelledby="user-menu-button"
-                tabindex="-1"
-              >
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-sm text-gray-700"
-                  role="menuitem"
-                  tabindex="-1"
-                  id="user-menu-item-2"
-                >Sign out</a>
+              <!-- Profile dropdown -->
+              <div class="relative ml-3">
+                <div>
+                  <button
+                    type="button"
+                    class="
+                      relative
+                      flex
+                      max-w-xs
+                      items-center
+                      rounded-full
+                      bg-gray-800
+                      text-sm
+                      focus:outline-none
+                      focus:ring-2
+                      focus:ring-white
+                      focus:ring-offset-2
+                      focus:ring-offset-gray-800
+                    "
+                    id="user-menu-button"
+                    aria-expanded="false"
+                    aria-haspopup="true"
+                  >
+                    <span class="absolute -inset-1.5"></span>
+                    <span class="sr-only">Open user menu</span>
+                    <img
+                      class="h-8 w-8 rounded-full"
+                      src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                      alt=""
+                    >
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+
+        <% end %>
       </div>
     </div>
   </nav>
