--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,6 +41,9 @@
               <div>
                 <%= link_to "Sign out",
                 destroy_user_session_path,
+                data: {
+                  "turbo-method": :delete
+                },
                 class:
                   "text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium" %>
               </div>
@@ -71,7 +74,7 @@
                     <span class="sr-only">Open user menu</span>
                     <img
                       class="h-8 w-8 rounded-full"
-                      src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                      src="https://api.dicebear.com/7.x/bottts/svg?seed=<%= current_user.email %>&options[mood][]=happy"
                       alt=""
                     >
                   </button>
