--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,35 @@
-<p style="color: green"><%= notice %></p>
-
 <div id="tasks">
-  <% @tasks.each do |task| %>
-    <%= render task %>
-    <p>
-      <%= link_to "Show this task", task %>
-    </p>
-  <% end %>
+  <table>
+    <thead>
+      <tr>
+        <th>Task</th>
+        <th>Status</th>
+        <th>Created at</th>
+        <th>Due date</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @tasks.each do |task| %>
+        <tr>
+          <td><%= task.title %></td>
+          <td><%= task.status %></td>
+          <td><%= task.created_at.to_formatted_s(:long) %></td>
+          <td><%= task.due_date.to_formatted_s(:long) %></td>
+          <td>
+            <%= link_to "Show", task_path(task) %>
+            <%= link_to "Edit", edit_task_path(task) %>
+            <%= link_to "Delete",
+            task_path(task),
+            method: :delete,
+            data: {
+              confirm: "Are you sure?"
+            } %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 
 <%= link_to "New task", new_task_path, class: "btn" %>
