--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,10 +2,10 @@
 
 <%= render @task %>
 
-<div>
-  <%= link_to "Edit this task", edit_task_path(@task), class: "btn" %>
+<div class="mt-4">
+  <%= link_to "Edit this task", edit_task_path(@task) %>
   |
-  <%= link_to "Back to tasks", tasks_path, class: "btn" %>
-
-  <%= button_to "Destroy this task", @task, method: :delete %>
+  <%= link_to "Back to tasks", tasks_path %>
+  |
+  <%= link_to "Destroy this task", @task, method: :delete %>
 </div>
