--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, data: {controller: 'cities-select'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -18,6 +18,27 @@
   <div class="field">
     <%= f.label :password_confirmation %><br/>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :country %><br/>
+    <%= f.select :country,
+             options_for_select(@countries),
+             { include_blank: true },
+             {
+               data: {
+                 action: "change->cities-select#loadCities",
+                 "cities-select-target": "country"
+               }
+             } %>
+  </div>
+
+  <div>
+    <%= f.label :city %><br/>
+    <%= f.select :city,
+             [],
+             { include_blank: true },
+             { data: { "cities-select-target": "cities" } } %>
   </div>
 
   <div class="actions">
